<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBCF4B"
    android:backgroundTint="#FBCF4B"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/imgprincipal">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="380dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edt_usuario"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/rojo">
            </TextView>

            <EditText
                android:id="@+id/editTextUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/txt_usuario"
                android:minHeight="55dp"
                android:textSize="30dp">
            </EditText>

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edt_clave"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/rojo">
            </TextView>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/txt_clave"
                android:minHeight="55dp"
                android:textSize="30dp">
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <Button
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_registrar"
                    android:minHeight="60dp"
                    android:textSize="18dp">
                </Button>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="60dp"
                    android:onClick="ingresar"
                    android:text="@string/btn_ingresar"
                    android:textSize="20dp"
                    android:backgroundTint="@color/verde"
                    android:layout_margin="10dp">
                </Button>



            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>